@@ -301,7 +301,7 @@ public class Formatter {
     public void setShiftWidth(int shiftWidth) {
         customShiftWidth = true;
         if (this.shiftWidth == null || this.shiftWidth.intValue() != shiftWidth) {
-            this.shiftWidth = new Integer(shiftWidth);
+            this.shiftWidth = Integer.valueOf(shiftWidth);
         }
     }
 
